Add files via commit

--- a/Bangla_Speech_Emotion_Recognition_with_Intensity_Level.ipynb
+++ b/Bangla_Speech_Emotion_Recognition_with_Intensity_Level.ipynb
@@ -2,10 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -13,15 +10,18 @@
         "id": "m-Ya-Q3Hg1b3",
         "outputId": "624c8639-5bea-4dc6-f943-447f1a4022ba"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ]
     },
     {
@@ -36,8 +36,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "1-1\n",
             "['/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-001.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-002.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-003.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-004.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-005.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-006.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-007.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-008.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-009.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-010.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-001.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-002.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-003.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-004.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-005.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-006.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-007.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-008.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-009.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-010.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-011.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-012.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-013.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-014.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-015.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-016.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-017.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-018.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-019.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-020.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-011.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-012.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-013.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-014.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-015.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-016.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-017.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-018.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-019.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-020.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-021.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-022.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-023.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-024.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-025.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-026.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-027.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-028.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-029.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-030.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-021.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-022.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-023.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-024.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-025.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-026.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-027.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-028.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-029.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-030.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-031.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-032.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-033.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-034.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-035.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-036.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-037.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-038.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-039.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-040.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-031.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-032.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-033.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-034.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-035.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-036.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-037.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-038.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-039.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-040.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-041.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-042.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-043.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-044.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-045.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-046.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-047.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-048.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-049.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-0-050.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-041.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-042.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-043.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-044.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-045.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-046.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-047.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-048.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-049.wav', '/content/drive/MyDrive/Thesis/Dataset/Bangla/All/1-1-1-050.wav']\n",
@@ -253,7 +253,7 @@
         "        \n",
         "        x = np.array(x)\n",
         "        y = np.array(y)\n",
-        "        kfold = KFold(n_splits=5, random_state=None, shuffle=False)\n",
+        "        kfold = KFold(n_splits = 5, random_state = None, shuffle = False)\n",
         "        foldCount = 1\n",
         "        for train, test in kfold .split(x, y):\n",
         "            if (foldCount == fold):\n",
@@ -297,6 +297,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Y2x6rSiEXZvJ"
@@ -610,6 +611,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "SENkCgvhb6e_"
@@ -622,16 +624,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "UGaGu6d7Xjnw",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "UGaGu6d7Xjnw",
         "outputId": "dc0e79ef-ebea-45f5-90ba-490d6fa22936"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "720\n",
             "180\n",
@@ -750,6 +752,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "RNlYv_C3sC0h"
@@ -762,16 +765,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "GYCklbtqPksc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "GYCklbtqPksc",
         "outputId": "c3c4e459-4ca6-4f24-b369-bef9d4c115c9"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "180\n",
             "6/6 [==============================] - 4s 410ms/step\n",
@@ -1186,6 +1189,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "EQKrvzGtbny5"
@@ -1198,16 +1202,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "E7Glu9Q5mcdK",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "E7Glu9Q5mcdK",
         "outputId": "871b9bfa-3c64-4e74-9bf2-8d81a9f8ccc9"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Model: \"model3d\"\n",
             "_________________________________________________________________\n",
